[gd_scene load_steps=4 format=3 uid="uid://6g7sre7sw7vc"]

[ext_resource type="Script" path="res://Player.gd" id="1_bm4ua"]
[ext_resource type="Texture2D" uid="uid://cqicyo05egkci" path="res://Player2.png" id="2_o1rcs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5oxak"]
size = Vector2(32, 32)

[node name="player1" type="CharacterBody2D"]
script = ExtResource("1_bm4ua")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_o1rcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5oxak")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="start" type="Button" parent="HUD"]
anchors_preset = -1
anchor_left = 0.914931
anchor_top = 0.958333
anchor_right = 0.993924
anchor_bottom = 0.986111
theme_override_font_sizes/font_size = 64
metadata/_edit_use_anchors_ = true

[node name="message" type="Label" parent="HUD"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.921007
anchor_top = 0.962963
anchor_right = 0.949653
anchor_bottom = 0.984568
theme_override_font_sizes/font_size = 7
text = "dash cold"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="score_label" type="Label" parent="HUD"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.969618
anchor_top = 0.953704
anchor_right = 0.980035
anchor_bottom = 0.993827
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="HUD"]
anchors_preset = -1
anchor_left = 0.881944
anchor_top = 0.0169753
anchor_right = 0.993924
anchor_bottom = 0.0648148
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="HUD/Button" to="." method="_on_button_pressed"]
